--- a/package.json
+++ b/package.json
@@ -1,41 +1,21 @@
 {
   "name": "@lassehaslev/restful-vue",
-  "description": "Helpers for showing, update and delete elements",
-  "author": "Lasse S. Haslev <lasse@haslev.no>",
-  "main": "src/RestfulVue.js",
+  "version": "0.1.3",
   "public": true,
+  "description": "Helpers for showing, update and delete elements",
+  "main": "src/RestfulVue.js",
+  "author": "Lasse S. Haslev <lasse@haslev.no>",
+  "license": "MIT",
   "scripts": {
-    "watchify": "watchify -vd -p browserify-hmr -e src/main.js -o dist/build.js",
-    "serve": "http-server -c 1 -a localhost",
-    "dev": "npm-run-all --parallel watchify serve",
-    "build": "cross-env NODE_ENV=production browserify src/main.js | uglifyjs -c warnings=false -m > dist/build.js"
-  },
-  "dependencies": {
-    "vue": "^1.0.0",
-    "vue-resource": "^0.9.3"
+    "prod": "gulp --production",
+    "dev": "gulp watch"
   },
   "devDependencies": {
-    "babel-core": "^6.0.0",
-    "babel-plugin-transform-runtime": "^6.0.0",
-    "babel-preset-es2015": "^6.0.0",
-    "babel-preset-stage-2": "^6.0.0",
-    "babel-runtime": "^6.0.0",
-    "babelify": "^7.2.0",
-    "browserify": "^12.0.1",
-    "browserify-hmr": "^0.3.1",
-    "cross-env": "^1.0.6",
-    "http-server": "^0.9.0",
-    "mockjax-router": "^1.1.1",
-    "npm-run-all": "^1.6.0",
-    "uglify-js": "^2.5.0",
-    "vueify": "^8.5.2",
-    "watchify": "^3.4.0"
+    "gulp": "^3.9.1",
+    "laravel-elixir": "^5.0.0",
+    "laravel-elixir-vueify": "^1.0.3"
   },
-  "browserify": {
-    "transform": [
-      "vueify",
-      "babelify"
-    ]
-  },
-  "version": "0.1.3"
+  "dependencies": {
+    "vue-resource": "^0.9.3"
+  }
 }
