Added browserify settings and babel rc.

--- a/package.json
+++ b/package.json
@@ -17,5 +17,10 @@
   },
   "dependencies": {
     "vue-resource": "^0.9.3"
+  },
+  "browserify": {
+      "transform": [
+          "babelify"
+      ]
   }
 }
